--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# Ignore emacs autosave
+*~
+
+/.nix-hex/
+/.nix-mix/
+
+# Ignore compiled elm
+/assets/elm-stuff
+
+# Ignore database contents
+/db/
+
 # The directory Mix will write compiled artifacts to.
 /_build/
 
@@ -20,7 +32,7 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-chan-*.tar
+emmy_chan-*.tar
 
 # If NPM crashes, it generates a log, let's ignore it too.
 npm-debug.log
@@ -28,10 +40,9 @@ npm-debug.log
 # The directory NPM downloads your dependencies sources to.
 /assets/node_modules/
 
-#Ignore elm build artifacts
-/assets/elm-stuff
-
 # Since we are building assets from assets/,
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
 /priv/static/
+
+
